@@ -207,6 +207,9 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   signature 1 from the MeetingConfig and only redefine signature 2 on the MeetingGroup
 - When creating an item from a template, if the first edition is cancelled, it is deleted
 - When removing a MeetingConfig, make sure every created groups (meetingmanagers, powerobservers, ...) are removed as well
+- When editing an item, in the 'preferredMeeting' list box, display the meeting review_state next to the meeting date so
+  users are aware of the review_state of the meeting they are selecting.  This is useful to know if a meeting is in a
+  frozen state or not
 
 3.3 (2015-02-27)
 ----------------
